[tool.poetry]
name = "data-engineering-example"
version = "1.0.0"
description = "An example Dagster project showcasing authors' engineering skills."
authors = [
    "Hynek Davídek <hynek.davidek@gmail.com>"
]
readme = "README.md"
packages = [{ include = "data_prep" }]

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^1.1.18"
dagit = "^1.1.18"
httpx = "^0.23.3"
pandas = "^1.5.3"
streamlit = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pre-commit = "^3.0.4"
black = "^23.1.0"
isort = "^5.12.0"
debugpy = "^1.6.0"
mypy = "^1.0.0"
pylint = "^2.16.2"

[tool.black]
language-version = "python3.10"
include = '\.py$'
quiet = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "data_prep"
